--- a/try.ipynb
+++ b/try.ipynb
@@ -2,31 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 14 PDF files to process...\n",
+      "Found 16 PDF files to process...\n",
       "==================================================\n",
-      "[1/14] Processing: ref_1a.pdf - ✓ Extracted 6 images\n",
-      "[2/14] Processing: ref_1b.pdf - ✓ Extracted 17 images\n",
-      "[3/14] Processing: ref_2a.pdf - ✓ Extracted 6 images\n",
-      "[4/14] Processing: ref_3a.pdf - ✓ Extracted 9 images\n",
-      "[5/14] Processing: ref_4a.pdf - ✓ Extracted 8 images\n",
-      "[6/14] Processing: ref_4b.pdf - ✓ Extracted 8 images\n",
-      "[7/14] Processing: ref_5a.pdf - ✓ Extracted 9 images\n",
-      "[8/14] Processing: ref_5b.pdf - ✓ Extracted 11 images\n",
-      "[9/14] Processing: ref_6a.pdf - ✓ Extracted 2 images\n",
-      "[10/14] Processing: ref_6b.pdf - ✓ Extracted 13 images\n",
-      "[11/14] Processing: ref_7a.pdf - ✓ Extracted 10 images\n",
-      "[12/14] Processing: ref_7b.pdf - ✓ Extracted 10 images\n",
-      "[13/14] Processing: ref_8a.pdf - ✓ Extracted 7 images\n",
-      "[14/14] Processing: ref_8b.pdf - ✓ Extracted 7 images\n",
+      "[1/16] Processing: Lia_1.pdf - ✓ Extracted 6 images\n",
+      "[2/16] Processing: Lia_2.pdf - ✓ Extracted 4 images\n",
+      "[3/16] Processing: Lia_3.pdf - ✓ Extracted 7 images\n",
+      "[4/16] Processing: Lia_4.pdf - ✓ Extracted 4 images\n",
+      "[5/16] Processing: Lia_5.pdf - ✓ Extracted 5 images\n",
+      "[6/16] Processing: Lia_6.pdf - ✓ Extracted 3 images\n",
+      "[7/16] Processing: Lia_7.pdf - ✓ Extracted 4 images\n",
+      "[8/16] Processing: Lia_8.pdf - ✓ Extracted 6 images\n",
+      "[9/16] Processing: Lib_1.pdf - ✓ Extracted 14 images\n",
+      "[10/16] Processing: Lib_2.pdf - ✓ Extracted 24 images\n",
+      "[11/16] Processing: Lib_3.pdf - ✓ Extracted 13 images\n",
+      "[12/16] Processing: Lib_4.pdf - ✓ Extracted 7 images\n",
+      "[13/16] Processing: Lib_5.pdf - ✓ Extracted 9 images\n",
+      "[14/16] Processing: Lib_6.pdf - ✓ Extracted 12 images\n",
+      "[15/16] Processing: Lib_7.pdf - ✓ Extracted 9 images\n",
+      "[16/16] Processing: Lib_8.pdf - ✓ Extracted 7 images\n",
       "==================================================\n",
-      "Processing completed! 123 images extracted\n",
+      "Processing completed! 134 images extracted\n",
       "Results saved to: extracted_images_report.csv\n",
       "Images saved to: c:\\Users\\dkbay\\Downloads\\code\\Project with Thinh\\LLM\\Paper_retrieval\\extracted_images\n"
      ]
@@ -44,14 +46,12 @@
     "def get_configuration_constants():\n",
     "    return {\n",
     "        'DEFAULT_KEYWORDS': [\n",
-    "            \"Cu||Li\", \"Li||Cu\", \"Li-Cu\", \"Cu-Li\", \n",
+    "            \"Cu||Li\", \"Li||Cu\", \"Li-Cu\", \"Cu-Li\", 'Aurbach',\n",
     "            \"coulombic efficiency\", \"CE\", \"coulombic efficiencies\",\n",
     "            \"conductivity\", \"conductivities\", \n",
-    "            \"viscosity\", \"viscosities\",\n",
-    "            \"lithium metal\", \"electrolyte\", \"anode\", \"cathode\",\n",
-    "            \"cycling performance\", \"capacity retention\"\n",
+    "            \"viscosity\", \"viscosities\"\n",
     "        ],\n",
-    "        'SIMILARITY_THRESHOLD': 0.4,\n",
+    "        'SIMILARITY_THRESHOLD': 0.5,\n",
     "        'SPACY_MODEL': \"en_core_web_md\"\n",
     "    }\n",
     "\n",
@@ -97,10 +97,8 @@
     "\n",
     "\n",
     "def is_caption_text(text):\n",
-    "    if re.search(r\"\\b(Fig\\.?|Figure|Table|Scheme|Chart)\\b\", text, re.IGNORECASE):\n",
-    "        return True\n",
-    "    words = text.split()\n",
-    "    if 5 < len(words) < 150:\n",
+    "    # Check if caption starts with specific keywords\n",
+    "    if re.search(r\"^(Figure|Fig\\.?|Supplementary Figure)\\b\", text.strip(), re.IGNORECASE):\n",
     "        return True\n",
     "    return False\n",
     "\n",
@@ -187,6 +185,25 @@
     "    return results\n",
     "\n",
     "\n",
+    "def get_all_pdf_files(paper_folder, si_folder):\n",
+    "    \"\"\"Get all PDF files from both folders\"\"\"\n",
+    "    all_files = []\n",
+    "    \n",
+    "    # Get files from paper folder\n",
+    "    if os.path.exists(paper_folder):\n",
+    "        paper_files = [f for f in os.listdir(paper_folder) if f.lower().endswith('.pdf')]\n",
+    "        for f in paper_files:\n",
+    "            all_files.append((os.path.join(paper_folder, f), f))\n",
+    "    \n",
+    "    # Get files from SI folder\n",
+    "    if os.path.exists(si_folder):\n",
+    "        si_files = [f for f in os.listdir(si_folder) if f.lower().endswith('.pdf')]\n",
+    "        for f in si_files:\n",
+    "            all_files.append((os.path.join(si_folder, f), f))\n",
+    "    \n",
+    "    return all_files\n",
+    "\n",
+    "\n",
     "def write_results_to_csv(output_csv, all_results):\n",
     "    fieldnames = ['pdf_file', 'image_file', 'page', 'caption', 'keywords', 'similarity_scores']\n",
     "    \n",
@@ -205,7 +222,7 @@
     "            })\n",
     "\n",
     "\n",
-    "def process_pdf_folder(folder_path, output_csv, keywords=None, similarity_threshold=None):\n",
+    "def process_pdf_folders(paper_folder, si_folder, output_csv, extracted_images_folder, keywords=None, similarity_threshold=None):\n",
     "    config = get_configuration_constants()\n",
     "    \n",
     "    if keywords is None:\n",
@@ -216,22 +233,23 @@
     "    nlp = load_spacy_model()\n",
     "    keyword_embeddings = prepare_keyword_embeddings(nlp, keywords)\n",
     "    \n",
-    "    output_dir = os.path.join(os.getcwd(), \"extracted_images\")\n",
+    "    output_dir = os.path.join(os.getcwd(), extracted_images_folder)\n",
     "    os.makedirs(output_dir, exist_ok=True)\n",
     "    \n",
     "    all_results = []\n",
-    "    pdf_files = [f for f in os.listdir(folder_path) if f.lower().endswith('.pdf')]\n",
-    "    total_pdfs = len(pdf_files)\n",
     "    \n",
-    "    print(f\"Found {total_pdfs} PDF files to process...\")\n",
+    "    # Get all PDF files from both folders\n",
+    "    all_files = get_all_pdf_files(paper_folder, si_folder)\n",
+    "    total_files = len(all_files)\n",
+    "    \n",
+    "    print(f\"Found {total_files} PDF files to process...\")\n",
     "    print(\"=\" * 50)\n",
     "    \n",
-    "    for idx, filename in enumerate(pdf_files, 1):\n",
-    "        pdf_path = os.path.join(folder_path, filename)\n",
-    "        print(f\"[{idx}/{total_pdfs}] Processing: {filename}\", end=\"\")\n",
+    "    for idx, (file_path, filename) in enumerate(all_files, 1):\n",
+    "        print(f\"[{idx}/{total_files}] Processing: {filename}\", end=\"\")\n",
     "        \n",
     "        try:\n",
-    "            pdf_results = process_single_pdf(pdf_path, nlp, keyword_embeddings, similarity_threshold, output_dir)\n",
+    "            pdf_results = process_single_pdf(file_path, nlp, keyword_embeddings, similarity_threshold, output_dir)\n",
     "            \n",
     "            for result in pdf_results:\n",
     "                result['pdf_file'] = filename\n",
@@ -253,14 +271,18 @@
     "\n",
     "\n",
     "def main():\n",
-    "    folder_name = \"paper\"\n",
+    "    paper_folder = os.path.join(os.getcwd(), \"paper\")\n",
+    "    si_folder = os.path.join(os.getcwd(), \"paper_SI\")\n",
     "    OUTPUT_CSV = \"extracted_images_report.csv\"\n",
+    "    EXTRACTED_IMAGES_FOLDER = \"extracted_images\"\n",
     "    \n",
     "    config = get_configuration_constants()\n",
     "    \n",
-    "    process_pdf_folder(\n",
-    "        folder_path=os.path.join(os.getcwd(), folder_name),\n",
+    "    process_pdf_folders(\n",
+    "        paper_folder=paper_folder,\n",
+    "        si_folder=si_folder,\n",
     "        output_csv=OUTPUT_CSV,\n",
+    "        extracted_images_folder=EXTRACTED_IMAGES_FOLDER,\n",
     "        keywords=config['DEFAULT_KEYWORDS'],\n",
     "        similarity_threshold=config['SIMILARITY_THRESHOLD']\n",
     "    )\n",
